<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EventPlanner</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login_">Login_Activity</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="title_activity_events_view">EventsView</string>
    <string name="hint_eventname">Name of event</string>
    <string name="hint_eventdate">Date</string>
    <string name="hint_locationevent">Location</string>
    <string name="hint_descriptionevent">Description</string>
    <string name="hint_byosys_categoryname">category name</string>
    <string name="textview_registered_categories">Registered Categories</string>
    <string name="hint_byosys_itemname">Item name</string>
    <string name="hint_byosys_quantity">Quantity</string>
    <string name="hint_donator">Donator</string>
    <string name="title_activity_events_details">EventsDetailsActivity</string>
    <string name="title_activity_event_creation">EventCreationActivity</string>
    <string name="title_activity_byosys_query">BYOSysQueryActivity</string>
    <string name="title_activity_byosys_creation">BYOSysCreationActivity</string>
    <string name="title_activity_byosys_item_creation">BYOSysItemCreationActivity</string>
    <string name="hint_city_mainmenu">City or Zipcode</string>
    <string name="hint_country_mainmenu">Country</string>
    <string name="title_activity_weather_query">WeatherQueryActivity</string>
    <string name="title_activity_juke_box">JukeBoxActivity</string>

</resources>
